# k_dbm

./: CMakeLists.txt  CMakePresets.json  README.md  k_dbm.cmake
include/: k_dbm.h
mock/: k_dbm_mock.c  k_dbm_mock.h
src/: k_dbm.c  k_dbm_priv.h
test/: CMakeLists.txt  k_dbm_test.cpp
